--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 header {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('../imagens/banner_site.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('../imagens/galaxy.jpg');
     background-position: center;
     background-size: cover;
 }
@@ -68,4 +68,9 @@ header .menu .ativo, header .menu a:hover {
 .principal .links a:hover {
     color: #444;
     background-color: white;
+}
+
+.conta, .links {
+    color: white;
+    padding: 8px 12px;
 }
